added nginx requirement to exemplary service

--- a/exemplary_httptarpit.service
+++ b/exemplary_httptarpit.service
@@ -1,5 +1,6 @@
 [Unit]
 Description = Slowly serve static html on multiple localhost ports
+Requires = nginx.service
 After = network.target
 
 [Service]
